--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ padding-top: 15px;
 #welcomemessage {
   width: 620px;
   padding-bottom: 15px;
+  font-size: 20px;
 }
 #content {
   width: 560px;
@@ -100,14 +101,6 @@ border: 1px solid #5f5f5f;
 width: 130px;
 }
 
-#cutter {
-  float: right;
-  margin: 10px;
-  border: 1px solid #5f5f5f;
-  width: 130px;
-  height: 130px;
-}
-
 .contentsection {
 padding-top: 6px;
 margin-bottom: 15px;
@@ -117,16 +110,9 @@ margin-bottom: 15px;
   float: right;
   border: 1px solid #5f5f5f;
   width: 330px;
-  margin-top: 5px;
+  margin-top: 62px;
   margin-right: 5px;
-}
-
-#colorfulfish {
-  float: right;
-  border: 1px solid #5f5f5f;
-  width: 330px;
-  margin-top: 138px;
-  margin-right: -331px;
+  clear: left;
 }
 
 #cutter {
@@ -141,9 +127,48 @@ margin-bottom: 15px;
   clear: both;
 }
 
-#sidebar {
-  width: 250px;
-  float: right;
-  margin: 30px 30px 0 0;
-  display: block;
+.eventslink {
+  margin-left: 155px;
+}
+
+#footer {
+  width: 945px;
+  height: 150px;
+  float: left;
+  background-color: #5f5f5f;
+}
+
+.locations {
+color: #fff;
+width: 600px;
+height: auto;
+margin-left: 37px;
+font-family: Georgia;
+font-style:italic;
+font-size: 10px;
+margin-top: 8px;
+padding-bottom: 2px;
+}
+
+.locationfields {
+  display: inline;
+  padding-bottom: 2px;
+  font-weight: bold;
+}
+
+#cutter {
+  float: left;
+  margin-top: 10px;
+  width: 130px;
+  border: 1px solid #5f5f5f;
+  display: inline;
+}
+
+#colorfulfish {
+    float: right;
+    border: 1px solid #5f5f5f;
+    width: 142px;
+    margin-top: -135px;
+    margin-right: -65px;
+    display: inline;
 }
