--- a/style.css
+++ b/style.css
@@ -78,12 +78,20 @@ padding-top: 15px;
 #welcomeheader {
   width: 620px;
   padding-bottom: 5px;
+  padding-left: 5px;
+  text-decoration: none;
+}
+
+.navlinks {
+  text-decoration: none;
+  color: inherit;
 }
 
 #welcomemessage {
   width: 620px;
   padding-bottom: 15px;
   font-size: 20px;
+  padding-left: 5px;
 }
 #content {
   width: 560px;
@@ -92,6 +100,7 @@ padding-top: 15px;
 .contentheadline {
 width: 560px;
 color: #af4f2f;
+padding-left: 5px;
 }
 
 .contentimg {
@@ -115,12 +124,8 @@ margin-bottom: 15px;
   clear: left;
 }
 
-#cutter {
-  float: right;
-  border: 1px solid #5f5f5f;
-  width: 330px;
-  margin-top: -10px;
-  margin-right: 5px;
+.listsaleitems {
+  margin-left: 155px;
 }
 
 .clear {
@@ -142,7 +147,7 @@ margin-bottom: 15px;
 color: #fff;
 width: 600px;
 height: auto;
-margin-left: 37px;
+margin-left: 44px;
 font-family: Georgia;
 font-style:italic;
 font-size: 10px;
