--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   width: 945px;
 
 }
-#storename {
+#cookiestorename {
   height: 265px;
   width: 195px;
   float: left;
@@ -176,4 +176,25 @@ padding-bottom: 2px;
     margin-top: -135px;
     margin-right: -65px;
     display: inline;
+}
+
+#fishform {
+background-color: #fff;
+width: 945px;
+margin-left: 115px;
+margin-top: 1px;
+}
+
+table {
+  background-color: #fff;
+  width: 945px;
+  margin-left: 115px;
+  text-align: center;
+}
+
+#salesfooter {
+  width: 945px;
+  height: 150px;
+  margin-left: 115px;
+  background-color: #5f5f5f;
 }
